modules/gdscript/tests/scripts/analyzer/errors/object_invalid_constructor.gd
# GH-73213

func test():
	print(Object())
